# study

./: .gitignore  .profile  CPP_NOTES.txt  bashrc_backup
1_AdvancedLinuxProgramming/: Notes
1_AdvancedLinuxProgramming/2.1_Interaction-With-The-Execution-Environment/: Makefile  README  argcargvExample
1_AdvancedLinuxProgramming/2.1_Interaction-With-The-Execution-Environment/b.GNU-LinuxCommand-LineConventions/: Notes.txt
1_AdvancedLinuxProgramming/2.1_Interaction-With-The-Execution-Environment/c.Using_getopt_long/: Makefile  argcargvExample
2022/: README.txt  a.out
2022/CPP-01_ConceptsReview/: CheckPoint  NOTES  a.out
2022/CPP-01_ConceptsReview/15-Inheritance/07_TheUpdatedAccountsExample/: CMakeLists.txt
2022/CPP-01_ConceptsReview/17-SmartPointers/02_SharedPointers/: CMakeLists.txt
2022/CPP-01_ConceptsReview/17-SmartPointers/02_SharedPointers/src/: main.cpp
2022/DataStructuresAndAlgorithms_08122021/: CheckPoint.txt
2022/PRACTICING/: atoi.c  draft  draft.cpp
2022/PRACTICING/STRINGS/: a.out  (+2 more)
2022/cmake/Example02_LinkWithLibs/: CMakeLists.txt
2022/cmake/Example02_LinkWithLibs/include/: linkedListOperations.h
2022/cmake/Example02_LinkWithLibs/lib_src/: linkedListOperations.cpp
2023/DSA/: ROUTE.txt
2023/others/: a.out  test.c
2024/CPP_Intermediary_Topic_042024/: DoublyLinkedList_Example.c  main.cpp
2024/gtest_gmock_test/: CMakeLists.txt  sample_test.cpp
CPA_cpp/: CheckPoint  CheckPoint.orig  deadlines
CPA_cpp/1_IntroductionToComputerProgramming/: Notes
CPA_cpp/2_AdvancedFlowControlAndDataAggregates/: Notes
CPA_cpp/3_ExtendingExpressivePower_PointersFunctionAndMemory/: Notes
CPA_cpp/4_AccessingDifferentKindOfData/: Notes
CPA_cpp/Extra/: vars_size
CompileMakefilesAndLibraries/1_CompilingWithGCC/: Notes
ComputationStructures/: Notes
ComputationStructures/01-BasicsOfInformation/: WorkedExamples
DRAFT/: a.out  checkPalindrome.c
DeviceDrivers/: Notes
ExtraContent/1_CompilingWithGCC/: Notes  inverso
Flask/: Notes  config.py
HackerRank/: bt_height
Legacy/: README.txt  roadmap
Legacy/CPA_cpp/: CheckPoint  deadlines
Legacy/DeviceDrivers/: Notes
Legacy/HackerRank/: height_of_a_binary_tree.c
Legacy/cpp/: control
Legacy/draft/: a.out  calcMax.c
Python_OO/02_ClassesE-Objetos/: carro.py  exercicio_2.py  main.py
Python_OO/03_ConstrutoresE-Destrutores/: exercicio_02.py
Python_OO/04_Herança/: carro.py  exercicio_01.py  moto.py
Python_OO/05_AtributosDeVisibilidadeE-Encapsulamento/: carro.py  main.py  moto.py
cpp/: control  control.orig
cpp/1_Pointers/: 2.1_ReferenceTypes.cpp  memoryManagement
cpp/Extra_Class/: 2_ClassMemberFunctions.cpp  3.1_ClassAccessModifiers-PublicAndProtected.cpp  4.1_ClassConstructor.cpp  4.2_ClassDestructor.cpp  5.1_CopyConstructor.cpp
draft/: eventElements  my_file
geekforce/competitive_programming/: ProblemStatement.txt  firstExcample.c
(+1327 files in other folders)
